# pg_ducklake

./: CLAUDE.md  Makefile  Makefile.pgxs  README.md
.github/clickbench/: pg_ducklake.patch
.github/workflows/: build_and_test.yaml  docker.yaml  release.yaml  sync-subtrees.yaml
docs/: ducklake_feature_coverage.md  foreign_data_wrapper.md  settings.md  sql_objects.md
examples/pg_duckdb/: Makefile
examples/pg_ducklake/: CLAUDE.md  Makefile  pg_ducklake_extensions.cmake
examples/pg_vortex/: Makefile  pg_vortex--0.1.0.sql  pg_vortex_extensions.cmake  regression.conf
include/pgddb/: pgddb_ddl.hpp  pgddb_duckdb.hpp  pgddb_node.hpp  pgddb_ruleutils.h  pgddb_subscript.h  (+1 more)
libpgduckdb/: pgddb_detoast.cpp  pgddb_duckdb.cpp  pgddb_node.cpp  pgddb_planner.cpp  pgddb_ruleutils.cpp  pgddb_subscript.cpp  pgddb_types.cpp
pg_duckdb/: Makefile
pg_ducklake/: CLAUDE.md  Makefile  README.md  pg_ducklake.control
pg_ducklake/test/e2e/: conftest.py  pyproject.toml  test_crud.py  test_duckdb_client.py  test_inlining.py  test_s3.py
sql/: pg_ducklake--0.1.0.sql
src/: pgddb_duckdb.cpp  pgddb_node.cpp  pgddb_planner.cpp  pgddb_ruleutils.cpp  pgddb_subscript.cpp  pgddb_types.cpp  pgducklake.cpp  pgducklake_call_handler.cpp  pgducklake_create_options.cpp  pgducklake_direct_insert.cpp  pgducklake_duckdb.cpp  pgducklake_duckdb_query.cpp  pgducklake_fdw.cpp  pgducklake_freeze.cpp  pgducklake_functions.cpp  pgducklake_guc.cpp  pgducklake_hooks.cpp  pgducklake_metadata_manager.cpp  pgducklake_sync.cpp  pgducklake_table.cpp  pgducklake_time_travel.cpp  pgducklake_vacuum.cpp
(+291 files in other folders)
